# router/app.go
@@ -22,5 +22,7 @@ func Router() *gin.Engine {
 	r.GET("/user/deleteUser", service.DeleteUser)
 	r.POST("/user/updateUser", service.UpdateUser)
 
+	r.POST("user/findByNameAndPwd", service.FindByNameAndPwd)
+
 	return r
 }
